# Prisoner-s_Dilemma

./: CMakeLists.txt  readme.txt
src/: main.cpp
src/core/: core.h
src/core/banker/: banker.h
src/strategies/: StrategiesTemplate.h  TitForTat.h
